--- a/res/menu/activity.xml
+++ b/res/menu/activity.xml
@@ -71,11 +71,11 @@
         <item
             android:id="@+id/menu_advanced"
             android:showAsAction="never"
-            android:visible="false" />
+            android:visible="true" />
         <item
             android:id="@+id/menu_settings"
             android:title="@string/menu_settings"
             android:showAsAction="never"
-            android:visible="false" />
+            android:visible="true" />
     </group>
 </menu>
